--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple crawler to get some data from Take's website",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +25,8 @@
     "express": "^4.16.3",
     "request": "^2.85.0",
     "request-promise": "^4.2.2"
+  },
+  "engines": {
+    "node": "7.5.0"
   }
 }
